@@ -1,3 +1,8 @@
+2017-07-13 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSIOThreadPool.m: Make the -terminate: method safe to call from
+	any thread (performs itself in the correct thread if it is executing).
+
 2015-10-07 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSFIFO.m: Add method for writing a whole block of data to a FIFO
